--- a/index.html
+++ b/index.html
@@ -8,20 +8,29 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="masking-input.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main>
       <form method="POST">
         <input
+          id="tel"
           type="tel"
           name="phone"
           required
-          pattern="\+7 [0-9]{3} [0-9]{3} [0-9]{4}"
+          pattern="\+7 \d{3} \d{3} \d{4}"
+          value="+7"
+          data-charset="+X XXX XXX XXXX"
+          maxlength="16"
+          placeholder="+7 ___ ___ ____"
+          class="masked"
+          title="Ваш номер телефона в указанном формате"
         />
-        <a class="button" href="#">ОТПРАВИТЬ ЗАЯВКУ</a>
+        <button class="button">ОТПРАВИТЬ ЗАЯВКУ</button>
       </form>
     </main>
+    <script src="input-mask.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
